@@ -1,5 +1,11 @@
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
+	  Mono.TextEditor/Caret.cs, Mono.TextEditor/FoldSegment.cs: Improved
+	  folding behavior.
+
+2008-02-05  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextEditor.cs: Changed bracket highlighting in selected
 	  regions.
 
